# parl-apex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  cancel_task.py  cancel_tender_task.py  check_status.py  create_tender_task.py  docker-compose.yml  main.py  process_tenders.py  pyproject.toml  render.yaml  requirements.txt  rescue_tenders.py  run_tender_test.py  tender_result.json  test_espocrm_connection.py  test_kuzu_db
agents/: __init__.py  erpnext_extraction_agent.py  extraction_agent.py  finance_agent.py  finance_schemas.py  operations_agent.py  operations_schemas.py  query_agent.py  query_schemas.py  research_graph_agent.py  spot_agent.py  spot_schemas.py  tender_scoring_agent.py
alembic/: env.py
alembic/versions/: 83cc8b55c705_add_spot_diagnostic.py  ee1eaff74b2a_initial.py
app/: auth.py  database.py  health.py  main.py  models.py
connectors/: __init__.py  erpnext_connector.py  espocrm_connector.py  quotation_connector.py  valyu_tender_connector.py
core/: __init__.py  config.py  paths.py  scheduler.py
documents/: quotation_generator.py
graph/: __init__.py  client_graph.py
scratch/: test_kuzu.py
scripts/: start.sh
synthesis/: __init__.py  correlation_engine.py  correlation_schemas.py
tests/: test_clients.py  test_correlation_engine_stage.py  test_erpnext_connector_stage.py  test_espocrm_connector.py  test_external_research_ingest.py  test_finance_agent_stage.py  test_graph.py  test_paths.py  test_query_agent_stage.py  test_spot_agent.py  test_stage_three_knowledge_graph.py  test_stage_two_orchestration_core.py
(+11 files in other folders)
